# PheTK

./: .gitignore  CHANGELOG.md  LICENSE  README.md  phewas_v0.py  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  tests.yml
benchmark/: compare_results.py  run_benchmark.py
docs/: cohort-module.md  dsub-considerations.md  phecode-module.md  phewas-module.md  plot-module.md
docs/tutorials/: README_FIRST.md  v0.2.1 APOE PheWAS - CLI - release candidate.ipynb  v0.2.1 APOE PheWAS - Cox Regression - release candidate.ipynb  v0.2.1 APOE PheWAS - Logistic Regression - release candidate.ipynb  v0.2.1 APOE PheWAS - dsub - release candidate.ipynb  v0.2.1 APOE PheWAS - dsub.ipynb
legacy/: README.md  README_legacy.md
src/: Cohort.py  PheWAS.py  PheWAS_test.py  Phecode.py  Plot.py  __init__.py  _manhattan_v0.py  _paths.py  _phewas_v0.py  _queries.py  _utils.py  covariate.py  genotype.py  hail.py  manhattan.py  manhattan_v0.py  manhattan_v1.py  paths.py  phecode.py  phewas.py  plot.py  queries.py  utils.py
src/PheTK/: Cohort.py  Demo.py  PheWAS.py  Phecode.py  Plot.py  _paths.py  _queries.py  _utils.py  demo.py
src/phetk/: __init__.py  __main__.py  _dsub.py  _paths.py  _queries.py  _utils.py  cohort.py  demo.py  phecode.py  phewas.py  plot.py
src/phetk/phecode/: phecodeX_WHO.csv
src/phetk/regression/: __init__.py  _base.py  _cox.py  _firth_cox.py  _firth_logit.py  _logit.py
tests/: conftest.py
tests/functional/: test_phecode_local.py  test_phewas_firth.py  test_phewas_local.py  test_plot.py
tests/integration/: test_cohort_aou.py  test_phecode_aou.py  test_phewas_aou.py
tests/unit/: test_cohort.py  test_dsub.py  test_firth_inference.py  test_phecode_unit.py  test_phewas_unit.py  test_queries.py  test_regression_backends.py  test_utils.py
