[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phetk"
version = "0.2.3"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    { name = "Tam Tran", email = "PheTK@mail.nih.gov" },
]
description = "The Phenotype Toolkit"
readme = "README.md"
dependencies = [
    "adjusttext",
    "connectorx",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "hail",
    "lifelines>=0.28.0,<0.30.1",
    "lxml",
    "matplotlib",
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0",
    "polars",
    "psutil",
    "pyarrow>=10.0.1",
    "statsmodels",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/nhgritctran/PheTK"

[project.scripts]
phetk = "phetk.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
phetk = ["phecode/*"]