[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phetk"
version = "0.2.9"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    { name = "Tam Tran", email = "PheTK@mail.nih.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
description = "The Phenotype Toolkit"
readme = "README.md"
dependencies = [
    "adjusttext",
    "connectorx",
    "duckdb",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "lifelines>=0.28.0,<0.30.1",
    "lxml",
    "matplotlib",
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0",
    "polars",
    "psutil",
    "pyarrow>=10.0.1",
    "pysam",
    "statsmodels",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/nhgritctran/PheTK"

[project.scripts]
phetk = "phetk.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
phetk = ["phecode/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "aou: mark test as requiring AoU Workbench environment",
]

[project.optional-dependencies]
hail = ["hail"]
dev = ["pytest", "pytest-mock"]